<resources>
    <string name="app_name">TastyFood</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_with_email">Sign In With Email</string>
    <string name="guest_user">Guest User</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="full_name">Full Name</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="sign_out">Sign Out</string>
    <string name="client_id">956128930830-h7a405nlgrok6fs37jf8s468v6s0i913.apps.googleusercontent.com</string>
    <string name="suggested_meal_of_the_day">Suggested Meal Of The Day</string>
    <string name="tasty_picks">Tasty Picks</string>
    <string name="mealofthedayid">mealOfTheDayId</string>
    <string name="dayofrecentmealoftheday">dayOfRecentMealOfTheDay</string>
    <string name="mealoftheday">MealOfTheDay</string>
    <string name="error">Error</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="close">close</string>
    <string name="ingredients">Ingredients:</string>
    <string name="watch_video">Watch Video:</string>
    <string name="calender_it">Calendar it</string>
    <string name="love_it">Love it</string>
    <string name="meal_added_to_your_calendar_successfully">Meal added To Your Calendar Successfully</string>
    <string name="meal_removed_from_your_favourite_list">Meal Removed From Your Favourite List</string>
    <string name="meal_added_to_your_favourite_list">Meal Added To Your Favourite List</string>
    <string name="your_favourite_meals_are_here">Your Favourite Meals Are Here</string>
    <string name="delete_All_meals_from_calendar">Delete All Meals from Calendar</string>
    <string name="select_date">Select Date</string>
    <string name="your_planned_meals">Your Planned Meals</string>
    <string name="ingredient">Ingredient</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="search">Search</string>
</resources>