<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".detailedMeal.DetailedMealFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardDetailedMealImgAndName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgDetailedMeal"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintDimensionRatio="H,16:9" />

            <TextView
                android:id="@+id/txtDetailedMeal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@drawable/white_bkground_lower_opacity"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="This is the name of card"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imgDetailedMealArea"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:contentDescription="Country Flag"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintDimensionRatio="H,16:9"
            app:layout_constraintEnd_toStartOf="@+id/txtDetailedMealArea"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardDetailedMealImgAndName" />

        <TextView
            android:id="@+id/txtDetailedMealArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="Egyptian"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintBottom_toBottomOf="@id/imgDetailedMealArea"
            app:layout_constraintEnd_toStartOf="@+id/imgDetailedMealCategory"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imgDetailedMealArea"
            app:layout_constraintTop_toTopOf="@id/imgDetailedMealArea" />

        <ImageView
            android:id="@+id/imgDetailedMealCategory"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="Country Flag"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="@id/imgDetailedMealArea"
            app:layout_constraintDimensionRatio="H,16:9"
            app:layout_constraintEnd_toStartOf="@+id/txtDetailedMealCategory"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txtDetailedMealArea"
            app:layout_constraintTop_toTopOf="@id/imgDetailedMealArea" />

        <TextView
            android:id="@+id/txtDetailedMealCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chicken breast"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/imgDetailedMealArea"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imgDetailedMealCategory"
            app:layout_constraintTop_toTopOf="@id/imgDetailedMealArea" />


        <TextView
            android:id="@+id/ingredientsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/ingredients"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgDetailedMealCategory" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredientsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ingredientsLabel" />

        <TextView
            android:id="@+id/videoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/watch_video"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ingredientsRecyclerView" />

        <WebView
            android:id="@+id/youtubeWebView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/videoLabel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCalender"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/white_button"
            android:text="@string/calender_it"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:icon="@drawable/calendar"
            app:iconSize="30dp"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/btnFav"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/youtubeWebView" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFav"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/black_button"
            app:backgroundTint="@null"
            android:text="@string/love_it"

            app:icon="@drawable/favorite_outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnCalender"
            app:layout_constraintTop_toTopOf="@id/btnCalender" />
        <TextView
            android:id="@+id/instructionsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Instructions:"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCalender" />

        <TextView
            android:id="@+id/txtMealInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/white"
            android:paddingStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instructionsLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
